Amélioration du README.md (#10)
Version 0.2.2

🚀 Amélioration du README.md pour un installation avec ou sans Docker
🚀 Ajout de la procédure de @Elypsen pour installer Docker sur Windows
🐛 L'admin doit avoir un nickname de défini dans les fixtures.
🐛 Le endpoint /api/users/:uuid doit retourner une 404 si l'utilisateur n'existe pas.
