# bin/swagger_output.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "API Express Brains",
     "description": "Public API for Express Brains Game",
-    "version": "0.1.9"
+    "version": "0.2.2"
   },
   "host": "localhost:3000",
   "basePath": "/",
@@ -62,7 +62,22 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "array"
+                },
+                "items": {
+                  "$ref": "#/definitions/UserRead"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "401": {
             "description": "Unauthorized"
@@ -125,6 +140,21 @@
             "description": "OK",
             "schema": {
               "$ref": "#/definitions/UserRead"
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "User not found"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
             }
           }
         },
